objects/mcsocsel10__SocialInsightsPostRecord__c.object
<CustomObject>
    <fields>
        <fullName>mcsocsel10__PostId__c</fullName>
        <label>PostId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__PostPersonaId__c</fullName>
        <label>PostPersonaId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__RecordId__c</fullName>
        <label>RecordId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Social Intelligence Post Record</label>
    <nameField>
        <label>SocialInsightsPostRecord Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Intelligence Post Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>